--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "fake-api": "json-server --watch vite-project/src/api/db.json --port 5000"
   },
   "dependencies": {
     "react": "^18.2.0",
