--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "fake-api": "json-server --watch vite-project/src/api/db.json --port 5000"
   },
   "dependencies": {
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "json-server":"^0.16.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
