--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "fake-api": "json-server --watch vite-project/src/api/db.json --port 5000"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "json-server": "^0.17.1",
+    "md5": "^2.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
