--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "jest": "^29.4.2",
     "vite": "^4.0.0"
   }
 }
