--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "vite build",
     "preview": "vite preview",
     "fake-api": "json-server --watch vite-project/src/api/db.json --port 5000",
-    "auth-api": "json-server-auth vite-project/src/api/db.json --port 3004"
+    "auth-api": "json-server-auth vite-project/src/api/db.json --port 3004",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "jest-environment-jsdom": "^29.4.2",
     "json-server": "^0.17.1",
     "json-server-auth": "^2.1.0",
     "md5": "^2.3.0",
@@ -21,11 +23,19 @@
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "jest": "^29.4.2",
+    "prettier": "^2.8.4",
     "vite": "^4.0.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
