--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "fake-api": "json-server --watch vite-project/src/api/db.json --port 5000",
     "auth-api": "json-server-auth vite-project/src/api/db.json --port 3004",
-    "test": "jest --watchAll"
+    "test": "jest"
   },
   "dependencies": {
+    "babel-jest": "^29.4.2",
     "bootstrap": "^5.2.3",
     "jest-environment-jsdom": "^29.4.2",
     "json-server": "^0.17.1",
@@ -34,8 +34,5 @@
     "jest": "^29.4.2",
     "prettier": "^2.8.4",
     "vite": "^4.0.0"
-  },
-  "jest": {
-    "testEnvironment": "jsdom"
   }
 }
