--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "json-server": "^0.17.1",
     "json-server-auth": "^2.1.0",
     "md5": "^2.3.0",
+    "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
