--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.8.0",
-    "sweetalert2": "^11.4.8",
+    "sweetalert2": "^11.7.3",
+    "sweetalert2-react-content": "^5.0.7",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
